--- a/index.html
+++ b/index.html
@@ -5,8 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-    
+    <!-- https://www.youtube.com/watch?v=pQr4O1OITJo -->
+    <!-- https://www.youtube.com/watch?v=WUBhpSRS_fk&t=0s -->
+    <!-- start quiz -->
+    <div class="start_btn">
+        <button>Start Quiz</button>
+    </div>
+
+    <div class="info_box">
+        <div class="info_title">
+            <span>Rules: </span>    
+        </div>
+        <div class="info_list">
+            <div class="info">Ypu will get only <span>15 seconds</span></div>
+            <div class="info">Selected answers cannot be changed</div>
+            <div class="info">Wwhen the time duration ends, cannot select any answer</div>
+            <div class="info">Once the quiz started, you are not allowed to leave the quiz</div>
+            <div class="info">For correct answers you will get points</div>
+        </div>
+        <div class="buttons">
+            <button class="quit">Exit Quiz</button>
+            <button class="restart">Continue</button>
+        </div>
+    </div>
+
+    <!-- quiz -->
+    <div class="quiz_box">
+        <header>
+            <div class="title">Quiz Application</div>
+            <div class="timer">
+                <div class="time_text">Time Left</div>
+                <div class="timer_sec">15</div>
+            </div>
+        </header>
+        <section>
+            <div class="que_text">
+                <span>Which of the following is not a scripting language</span>
+            </div>
+            
+            <div class="option_list">
+                <div class="option">
+                    <span>PHP</span>
+                    <div class="icon cross"><i class="fas fa-times"></i>
+                </div>
+                </div>
+                <div class="option">
+                    <span>Python</span>
+                    <div class="icon cross"><i class="fas fa-times"></i>
+                </div>
+            </div>
+                <div class="option">
+                    <span>Perl</span>
+                    <div class="icon cross"><i class="fas fa-times"></i>
+                </div>
+            </div>
+                <div class="option">
+                    <span>Java</span>
+                    <div class="icon tick"><i class="fas fa-check"></i>
+                </div>
+            </div>
+            </div>
+            </section>
+            <footer>
+                <div class="total_que">
+                    <span><p>2</p>of<p>5</p>Questions</span>
+                </div>
+                <button class="next_btn">Nest Que</button>
+            </footer>
+        </div>
+<!-- result box -->
+<div class="result-box">
+    <div class="icon">
+        <i class="fas fa-crown"></i>
+    </div>
+    <div class="complete_text">You have completed the quiz</div>
+    <div class="score_text">
+        <span>and sorry, You got only<p>2</p>out of<p>5</p></span>
+    </div>
+    <div class="button">
+        <button class="restart">Replay Quiz</button>
+        <button class="quit">Quit Quiz</button>
+    </div>
+</div>
 </body>
 </html>
